--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build:branch:
     - /kubeless function update ${CI_PROJECT_PATH_SLUG}-${CI_COMMIT_REF_NAME} -f function.go -n kubeless --handler placeholder.DoStuff --runtime go1.10 || /kubeless function deploy ${CI_PROJECT_PATH_SLUG}-${CI_COMMIT_REF_NAME} -f function.go -n kubeless --handler placeholder.DoStuff --runtime go1.10
     - /kubeless trigger http create ${CI_PROJECT_PATH_SLUG}-${CI_COMMIT_REF_NAME} --hostname ${CI_COMMIT_REF_NAME}.${CI_PROJECT_PATH_SLUG}.erie.cluster.cnct.io --namespace kubeless --function-name ${CI_PROJECT_PATH_SLUG}-${CI_COMMIT_REF_NAME} || echo "Already exists, probably"
 
-build:branch:
+build:notbranch:
   stage: build
   except:
     - branches
@@ -40,7 +40,7 @@ cleanup:teardown:branches:
     - /kubeless function delete ${CI_PROJECT_PATH_SLUG}-${CI_COMMIT_REF_NAME} -n kubeless || echo "Already deleted, probably"
   when: manual
   
-  cleanup:teardown:branches:
+  cleanup:teardown:notbranches:
   stage: cleanup
   except:
     - branches
